--- a/sate.html
+++ b/sate.html
@@ -110,6 +110,13 @@
                     <p>Kami hanya menggunakan bahan-bahan alami dan segar dalam setiap hidangan kami. Sayuran segar,beras perah pilihan, serta daging berkualitas tinggi adalah komitmen kami untuk memberikan Anda pengalaman kuliner terbaik yang sehat dan lezat. Rasakan perbedaannya dalam setiap gigitan!</p>
                 </div>
             </div>
+            <div class="gambar-kanan">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQMdoOlzWD6HRnIZ4SsAdg8iApTPsLo-KR3pA&s" alt="Daging Segar">
+                <div class="text-deskripsi">
+                    <h2>Kesegaran dalam Setiap Gigitan</h2>
+                    <p>Kami hanya menggunakan bahan-bahan alami dan segar dalam setiap hidangan kami. Sayuran segar,beras perah pilihan, serta daging berkualitas tinggi adalah komitmen kami untuk memberikan Anda pengalaman kuliner terbaik yang sehat dan lezat. Rasakan perbedaannya dalam setiap gigitan!</p>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Bahan end -->
