--- a/sate.html
+++ b/sate.html
@@ -109,6 +109,10 @@
                     <h2>Kesegaran dalam Setiap Gigitan</h2>
                     <p>Kami hanya menggunakan bahan-bahan alami dan segar dalam setiap hidangan kami. Sayuran segar,beras perah pilihan, serta daging berkualitas tinggi adalah komitmen kami untuk memberikan Anda pengalaman kuliner terbaik yang sehat dan lezat. Rasakan perbedaannya dalam setiap gigitan!</p>
                 </div>
+                <div class="text-deskripsi">
+                    <h2>Kesegaran dalam Setiap Gigitan</h2>
+                    <p>Kami hanya menggunakan bahan-bahan alami dan segar dalam setiap hidangan kami. Sayuran segar,beras perah pilihan, serta daging berkualitas tinggi adalah komitmen kami untuk memberikan Anda pengalaman kuliner terbaik yang sehat dan lezat. Rasakan perbedaannya dalam setiap gigitan!</p>
+                </div>
             </div>
         </div>
     </section>
